--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dp5tyobuo",
+    "ApiKey": "985175428875778",
+    "ApiSecret": "Z5xytuylBoQlj-60ZlNpDy8fVJI"
+    }
 }
